--- a/css/main.css
+++ b/css/main.css
@@ -90,7 +90,7 @@ input[type="submit"] {
 }
 
 .img:before {
-    content: url("/images/pattern-before.svg");
+    content: url("../images/pattern-before.svg");
     position: absolute;
     top: 70px;
     left: 305px;
@@ -98,7 +98,7 @@ input[type="submit"] {
 }
 
 .img:after {
-    content: url("/images/pattern-after.svg");
+    content: url("../images/pattern-after.svg");
     position: absolute;
     top: 70px;
     left: 35px;
